--- a/template/PNET_project.bib
+++ b/template/PNET_project.bib
@@ -15,13 +15,44 @@ Radiosensitivity Prediction},
   howpublished={\url{https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html}},
   year={Accessed: April 8, 2024}
 }
+@article{ccle,
+    author ={{Ghandi, M. and others}},
+    title = {{Next-generation characterization of the Cancer Cell Line Encyclopedia.}},
+    journal ={{Nature}},
+    year = 2019,
+    volume =569,
+    pages={{503-508}},
+    doi={https://doi.org/10.1038/s41586-019-1186-3}
+}
+@article{yard,
+    author ={{Yard. B and others}} ,
+    title = {{A genetic basis for the variation in the vulnerability of cancer to DNA damage}},
+    journal ={{Nat Communications}},
+    year = 2016,
+    volume=7,
+    page =11428
+}
+Yard BD, Adams DJ, Chie EK, Tamayo P, Battaglia JS, Gopal P, Rogacki K, Pearson BE, Phillips J, Raymond DP, Pennell NA, Almeida F, Cheah JH, Clemons PA, Shamji A, Peacock CD, Schreiber SL, Hammerman PS, Abazeed ME. A genetic basis for the variation in the vulnerability of cancer to DNA damage. Nat Commun. 2016 Apr 25;7:11428. doi: 10.1038/ncomms11428. PMID: 27109210; PMCID: PMC4848553.
 @misc{keras-docs,
   title={"Early Stopping"},
   author={{keras} contributors},
-  howpublished={\url{https://keras.io/api/callbacks/early_stopping/}},
+  howpublished={"https://keras.io/api/callbacks/early_stopping/"},
   year={Accessed: April 9, 2024}
 }
 
+@misc{myriad,
+    title={{Myriad}},
+    author={{UCL Research Computing}},
+    howpublished={{https://www.rc.ucl.ac.uk/docs/Clusters/Myriad/}},
+    year ={Acessed: April 10, 2024}
+}
+@article{reactome,
+    title={{The Reactome Pathway Knowledgebase}},
+    author={{Milacic M and others}},
+    year=2024,
+    journal ={{Nucleic Acids Research}},
+    doi = {{10.1093/nar/gkad1025}}
+}
 
 @article{proton_beam,
     author = {{Yock, T. and Tarbell, N.}} ,
@@ -127,4 +158,22 @@ author = {Jacob G Scott and Anders Berglund and Michael J Schell and Ivaylo Miha
 Publisher: Nature Publishing Group},
 	keywords = {Cancer genomics, Computer science},
 	file = {Full Text PDF:/Users/daksheshkololgi/Zotero/storage/YIFXQKGJ/Elmarakeby et al. - 2021 - Biologically informed deep neural network for pros.pdf:application/pdf},
+}
+
+
+
+@article{go_1,
+    author = {{Ashburner and others}},
+    title = {{Gene ontology: tool for the unification of biology}},
+    journal = {{Nature Genetics}},
+    year = 2000,
+volume = 25,
+pages ={{25-29}}
+}
+@article{go_1,
+    author = {{The Gene Ontology Consortium}},
+    title = {{he Gene Ontology knowledgebase in 2023}},
+    journal = {{Genetics}},
+    year = 2023,
+volume = 224,
 }
