--- a/template/dis-groupproject-metadata.tex
+++ b/template/dis-groupproject-metadata.tex
@@ -27,7 +27,7 @@
 \usepackage{authblk}
 \author[a]{Toby Dixon}
 \author[a]{Dakshesh Kololgi}
-\author[b]{Jason Ran}
+\author[a]{Jason Ran}
 
 \affil[a]{University College London}
 
